--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,22 +3,20 @@
     package="com.pittsburghparks.pghparks"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-    
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
-    
+
     <permission
-          android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
-          android:protectionLevel="signature" />
+        android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
 
@@ -36,12 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.pittsburghparks.pghparks.Parks"
-            android:label="@string/title_activity_parks"
-            android:parentActivityName="com.actionbarsherlock.app.SherlockActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.actionbarsherlock.app.SherlockActivity" />
+
+        <activity android:name=".Tab" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
