--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ target=android-16
 android.library.reference.1=../../../Development/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
 android.library.reference.2=../../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
 android.library.reference.3=../../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock-i18n
+android.library.reference.4=../../../Downloads/Android-Universal-Image-Loader-master/library
