--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -25,6 +25,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/parksTheme" >
+        
+        <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+        
         <activity
             android:name=".Main"
             android:label="@string/app_name" >
