--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,6 +19,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -63,6 +67,10 @@
             android:name=".ActivityDetail"
             android:label="@string/title_activity_activity_detail" >
         </activity>
+        
+        <meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="AIzaSyAAViJ_biSxu7RNdgW-dNwcMP1ZW2yUiMs"/>
     </application>
 
 </manifest>
