--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,20 +19,20 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
-    
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/parksTheme" >
-        
-        <meta-data android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
-        
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".Main"
             android:label="@string/app_name" >
@@ -67,10 +67,15 @@
             android:name=".ActivityDetail"
             android:label="@string/title_activity_activity_detail" >
         </activity>
-        
+
         <meta-data
-		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyAAViJ_biSxu7RNdgW-dNwcMP1ZW2yUiMs"/>
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAAViJ_biSxu7RNdgW-dNwcMP1ZW2yUiMs" />
+
+        <activity
+            android:name=".About"
+            android:label="@string/title_activity_about" >
+        </activity>
     </application>
 
 </manifest>
