--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -76,6 +76,10 @@
             android:name=".About"
             android:label="@string/title_activity_about" >
         </activity>
+        <activity
+            android:name=".Photo"
+            android:label="@string/title_activity_photo" >
+        </activity>
     </application>
 
 </manifest>
