photos feature added

--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=../../../Development/adt-bundle-mac-x86_64-20140702/
 android.library.reference.2=../../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
 android.library.reference.3=../../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock-i18n
 android.library.reference.4=../../../Downloads/Android-Universal-Image-Loader-master/library
+android.library.reference.5=../../../Downloads/JakeWharton-ViewPagerIndicator-8cd549f/library
